# EPI

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  inference.py  pyproject.toml  requirements.txt
EPI/: README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
EPI/episteward/: __init__.py  env.py  models.py  state.py
EPI/episteward.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
EPI/episteward/api/: __init__.py  server.py
EPI/episteward/data/: antibiotics.json  hospital_network.json  resistance_profiles.json
EPI/episteward/graders/: __init__.py  containment_grader.py  outbreak_grader.py  triage_grader.py
EPI/episteward/math/: __init__.py  bayes.py  evolution.py  network.py  pkpd.py
EPI/episteward/tasks/: __init__.py  base.py  task1_triage.py  task2_containment.py  task3_outbreak.py
EPI/server/: app.py
EPI/tests/: __init__.py  test_math.py  test_models.py  test_state.py  test_tasks.py
episteward/: env.py  models.py  state.py
episteward/api/: server.py
episteward/data/: hospital_network.json  pathogens.json
episteward/graders/: containment_grader.py  outbreak_grader.py  triage_grader.py
episteward/math/: bayes.py  evolution.py  network.py  pkpd.py
episteward/tasks/: task1_triage.py  task2_containment.py  task3_outbreak.py
tests/: test_graders.py  test_math.py  test_models.py  test_tasks.py
